<resources>
    <string name="app_name">MEP Engenharia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MEP Engenharia</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="About">About</string>
    <string name="Welcome">Bem vindo</string>
    <string name="logout">Logout</string>
    <string name="monitorEletrico">Monitor de eletrico</string>
    <string name="monitorReservatorio">Monitor de reservatorios</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_favorites">Praias favoritas</string>
    <string name="menu_Assessments">Buscar praias</string>
    <string name="create_account">Criar conta</string>
    <string name="login">Login</string>
    <string name="reset_password">Recuperar Senha</string>
    <string name="new_password">Criar nova senha</string>
    <string name="pagina_map">Mapa</string>
    <string name="verPraia">Informações da praia</string>
</resources>