<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mep.app.ui.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment android:id="@+id/nav_login"
        android:name="com.mep.app.ui.fragment.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login"/>

    <fragment android:id="@+id/nav_about"
        android:label="@string/About"
        tools:layout="@layout/fragment_about">
    </fragment>

    <fragment android:id="@+id/nav_monitorEletrico"
        android:name="com.mep.app.ui.fragment.MonitorEletricoFragment"
        android:label="@string/monitorEletrico"
        tools:layout="@layout/fragment_list_monitor_eletrico">
    </fragment>

    <fragment android:id="@+id/nav_monitorReservatorio"
        android:name="com.mep.app.ui.fragment.MonitorReservatorioFragment"
        android:label="@string/monitorReservatorio"
        tools:layout="@layout/fragment_list_monitor_eletrico">
    </fragment>

</navigation>